[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/font/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="GameName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -159.0
margin_top = 25.0
margin_right = 159.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "PONG FX"
align = 1
valign = 1

[node name="StartBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -60.0
margin_right = 91.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 2 )
text = "START_GAME"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -205.0
margin_top = -145.0
margin_right = -23.0
margin_bottom = -53.0
custom_constants/separation = 12
alignment = 1

[node name="SpanishBtn" type="Button" parent="VBoxContainer"]
margin_right = 182.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 2 )
text = "Espa√±ol"

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 182.0
margin_bottom = 62.0

[node name="EnglishBtn" type="Button" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 182.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 2 )
text = "English"

[connection signal="pressed" from="StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="button_down" from="VBoxContainer/SpanishBtn" to="." method="_on_SpanishBtn_button_down"]
[connection signal="button_down" from="VBoxContainer/EnglishBtn" to="." method="_on_EnglishBtn_button_down"]
